# github-issue

./: .gitignore  Fetch_first_comment_GitHub_Issue.ipynb  Pipfile  Python_crawler.ipynb  constants.py  hello-world-python-action.txt  ideal_markdown_issue_body_order.md  issue_first_comment_crawler.py  learn-github-action_issue_comments.json  main.py  package-lock.json  package.json  pygithub_get_comments.py  pygithub_get_comments_module.py  pyproject.toml  python_script.py  requirements.txt  services.py  testing_with_PyGithub.ipynb
.github/workflows/: issue_comment_no_env_.yaml  label_change.yaml  main.yml  python_github_action_trial.yml  pythonapp.yml  pythonapp_label_test.yml  workflow_python.yml
.github/worklfows/: label_change.yaml
dsc/: cmdline.py  connect.py  connect_repo.py  dict.py  email.py  githubrepo.py  invoice.py  issue.py  legacyinvoice.py  mrkdwn2html.py  mrkdwn_html.py  orderinfo.py  params.py  useremail.py
style/: dsc_msg.py  html_email.html  message.py  style.py
template/: update_template.html
tests/: dicty_order_data.py  ideal_markdown_to_html.html  info_email.py  invoice_data.html  issue_16_original_markdown.html  legacy_invoice_data.html  services.py  test_email  test_email.py  test_invoice.py  test_legacy.py  test_send.py
