[tool.poetry]
name = "learn-github-action"
version = "0.0.1"
description = ""
authors = ["Siddhartha Basu <biosidd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
PyGithub = "^1.51"
mistune = "^0.8.4"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.1"
jedi = "^0.17.0"
autopep8 = "^1.5.2"
rope = "^0.17.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
